# nucloid

./: BUILDING.md  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
doc/: roadmap.md
doc/arch/x86/: memory32.md
media/: fr.json  fr.keymap  iosevka.pxfont  us.json  us.keymap
src/: backtrace.rs  logging.rs  main.rs  misc.rs  panic.rs  screen.rs  sync.rs
src/arch/: mod.rs
src/arch/test/: frame.rs  mod.rs
src/arch/test/export/: cpu.rs  logging.rs  mem.rs  mod.rs  sync.rs  task.rs
src/arch/x86/: cpuid.rs  gdt.rs  init.rs  irq.rs  isr_entry32.s  isr_entry64.S  mod.rs  multiboot.rs  multiboot.s  multiboot2.S  start32.S  start64.S  start64.s
src/arch/x86/driver/: apic.rs  mod.rs  pic8259.rs  ps2.rs  serial.rs  vesa.rs  vga.rs
src/arch/x86/export/: cpu.rs  logging.rs  mem.rs  mod.rs  sync.rs  task.rs
src/arch/x86/export/mem/: mod.rs
src/arch/x86/mem/: mod.rs  paging.rs
src/driver/: gpio.rs  keyboard.rs  mod.rs  screen.rs  vga.rs
src/mem/: frame.rs  highmem.rs  load.rs  mod.rs
src/mem/kalloc/: bump_kalloc.rs  freelist_kalloc.rs  mod.rs
src/mem/kalloc/mimalloc/: heap.rs  mod.rs
src/task/: cpu.rs  cpu_local.rs  mod.rs  vm.rs
src/ui/: keymap.rs  kterm.rs  mod.rs  pxfont.rs  term.rs
targets/: i686-nucloid.json  i686.ld  x86_64-nucloid.json  x86_64.ld
