[package]
name = "nucloid"
version = "0.1.0"
authors = ["Kévin Lesénéchal <kevin.lesenechal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Uncontrolled integer overflows are a big deal in a kernel: we are not going to
# let them happen in production. Overflowing is a bug in Nucloid, it must never
# happen unless explicity allowed in a controlled way. Only checking safety
# invariants in debug builds and not in release is a serious design mistake.
overflow-checks = true

[build-dependencies]
cc = "1.0.79"

[dev-dependencies]
ctor = "0.1.21"

[dependencies]
thiserror-no-std = "2.0"
arrayvec = { version = "0.7", default-features = false, features = [] }
num-integer = { version = "0.1.44", default-features = false }
hashbrown = "0.13.2"
binrw = { version = "0.11.1", default-features = false }
gimli = { version = "0.27.2", default-features = false, features = ["read"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
multiboot2 = "0.14"
