##############################################################################
# Copyright © 2021-2023 Kévin Lesénéchal <kevin.lesenechal@gmail.com>        #
# This file is part of the Nucloid operating system.                         #
#                                                                            #
# Nucloid is free software; you can redistribute it and/or modify it under   #
# the terms of the GNU General Public License as published by the Free       #
# Software Foundation; either version 2 of the License, or (at your option)  #
# any later version. See LICENSE file for more information.                  #
##############################################################################

[package]
name = "nucloid"
version = "0.1.0"
authors = ["Kévin Lesénéchal <kevin.lesenechal@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Uncontrolled integer overflows are a big deal in a kernel: we are not going to
# let them happen in production. Overflowing is a bug in Nucloid, it must never
# happen unless explicity allowed in a controlled way. Only checking safety
# invariants in debug builds and not in release is a serious design mistake.
overflow-checks = true

[build-dependencies]
cc = "1.2.15"

[dev-dependencies]
ctor = "0.4.0"

[dependencies]
thiserror-no-std = "2.0"
arrayvec = { version = "0.7.6", default-features = false, features = [] }
num-integer = { version = "0.1.46", default-features = false }
hashbrown = "0.15.2"
binrw = { version = "0.14.1", default-features = false }
gimli = { version = "0.31.1", default-features = false, features = ["read"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
multiboot2 = "0.23.1"
